discussion/kv_engine/178758/178758_rev24_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52311: [2/n] Pause / Resume Bucket: BucketManager support

Implement pause & resume commands in BucketManager.

Commands are implemented as far as the EngineIface, whose default
implementation is to return 'not_supported'. Specific engine implemenations behaves as follows:

* Default engine 'supports' pause & resume - insofar as it returns
  'success' as it has no on-disk state.

* EWouldBlock engine passes the call down to the underlying engine.

* ep-engine for now has a stub implementation which returns 'success'
  - this will be filled in in subsequent patches.

Change-Id: I53f491a21f5a1e701bafd16ea7b3dd54ab5f786c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2022-09-07 10:27:39.000000000
Message: 
Uploaded patch set 24.
----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-09-07 10:38:13.000000000
Message: 
Patch Set 24:

(2 comments)
Line:191, daemon/protocol/mcbp/bucket_management_command_context.cc -> Q: Why do we care about running pause/resume in a bg task?

I mean, is there a problem we the frontend conn blocking on these operations? In the end:
- Pause - we are "stopping" the bucket
- Resume - nothing can happen until the bucket "wakes up"

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-09-07 10:41:13.000000000
Message: 
Patch Set 24:

(1 comment)
Line:191, daemon/protocol/mcbp/bucket_management_command_context.cc -> Yes, because ns_server could have multiple buckets they wish to pause and they don't want each one to block in turn.

However, you highlighted an issue I need fix which is that the Pause() mcbp command should return "success" immediately, instead of EWouldblock - thanks 😊

----------------------------------------------------------------------------------------------------------------------
Author: Paolo Cocchi
Date: 2022-09-07 10:47:11.000000000
Message: 
Patch Set 24:

(1 comment)
Line:191, daemon/protocol/mcbp/bucket_management_command_context.cc -> 👍
Same for Resume for the same reason I guess?

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-07 10:51:50.000000000
Message: 
Patch Set 24: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20098/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets_test.cc:353:5: error: use of undeclared identifier "shutdown_all_engines" [clang-diagnostic-error]
    shutdown_all_engines();
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20098/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets_test.cc:353:5:
error: use of undeclared identifier "shutdown_all_engines" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20098/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19319/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49056/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41241/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9798/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21388/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22062/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22418/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9896/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30454/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23161/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-09-27 08:49:10.000000000
MISMATCHED INLINE COMMENT
Line:191, daemon/protocol/mcbp/bucket_management_command_context.cc -> Done
----------------------------------------------------------------------------------------------------------------------
